# signin-pi

./: .gitignore  README.md  debug_run.py  passenger_wsgi.py  pyproject.toml
blueprints/admin/: admin.py
blueprints/admin/templates/: admin_main.html
blueprints/reports/: reports.py
blueprints/reports/staff_signin/: staff_signin.py
blueprints/reports/staff_signin/templates/: edit_user.html
blueprints/reports/templates/: all_reports.html  netID_report.html  report.html  staff_report.html  visits_page.html
blueprints/staff_signin/: staff_signin.py
blueprints/staff_signin/templates/: staff_signin.html
db/: common_functions.py  datastore.py  datastore_local.db  print.json  sites.json  sqlite_store.py  staff_signin.shelve.db.bak  staff_signin.shelve.db.dir  users.json  visits.db
helpers/: membership.py  timezone.py  user.py  visit.py
model/: datastore.py  users.json  users.py
templates/: access_denied.html  admin.html  base.html  error.html  firstvisit.html  main.html  pw.html  signedIn.html  signedout.html  visitor_signin.html  visitor_signin_1.html
templates/admin/: admin_main.html  edit_user.html  report.html  timepicker.html
