[tool.poetry]
name = "signin-pi"
version = "0.1.0"
description = ""
authors = ["Kim Chase"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
flask-login = "^0.5.0"
tinydb = "^4.3.0"
Flask-Bcrypt = "^0.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
